# cookiecutter-pypackage

./: .all-contributorsrc  CHANGELOG.md  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  README.md  README.rst  cookiecutter.json
.github/workflows/: release.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  env.example  manage.py  pyproject.toml  setup.cfg  tox.ini
{{ cookiecutter.project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.project_slug }}/.github/workflows/: codeql-analysis.yml  release.yml  test.yml  update.yml
{{ cookiecutter.project_slug }}/tests/: conftest.py  urls.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: settings.py  urls.py  wsgi.py
