[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = [
    "{{ cookiecutter.author }} <{{ cookiecutter.author_email }}>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/README.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  {% if cookiecutter.uses_django == 'y' %}"Framework :: Django",{% endif %}
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "~=3.6"
{% if cookiecutter.uses_django == 'y' %}django = "^2.2"{% endif %}
{% if cookiecutter.uses_django == 'y' %}django-environ = "^0.4.5"{% endif %}


[tool.poetry.dev-dependencies]
black = "=19.3b0"
flake8 = "^3.7"
flake8-isort = "^2.7"
ipython = "^7.6"
isort = "^4.3"
mypy = "^0.711.0"
pdbpp = "^0.10.0"
pre-commit = "^1.17"
pytest = "^3.0"
pytest-black = "^0.3.7"
pytest-cov = "^2.7"
{% if cookiecutter.uses_django == 'y' %}pytest-django = "^3.5"{% endif %}
pytest-flake8 = "^1.0"
pytest-mock = "^1.10"
pytest-mypy = "^0.3.3"
pytest-randomly = "^3.0"
tox = "^3.13"


[tool.black]
line-length = {{ cookiecutter.line_length }}
skip-string-normalization = true
target_version = ['py{{ cookiecutter.python_version.replace('.', '') }}']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
