[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = [
    "{{ cookiecutter.author }} <{{ cookiecutter.author_email }}>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/blob/master/README.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",{% if cookiecutter.uses_django == 'y' %}
  "Framework :: Django",{% endif %}
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

include = ["{{ cookiecutter.project_slug }}/py.typed"]
packages = [
  { include = "{{ cookiecutter.project_slug }}" },
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
{%- if cookiecutter.uses_django == 'y' %}

django = "^2.2"
django-environ = "^0.4.5"
{%- endif %}

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
isort = "^5.5.2"
mypy = "^0.782"
pep8-naming = "^0.11.1"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
{% if cookiecutter.uses_django == 'y' -%}
pytest-django = "^3.9.0"
{% endif -%}
pytest-mock = "^3.3.1"
tox = "^3.20.0"
tox-gh-actions = "^1.3.0"

[tool.black]
line-length = {{ cookiecutter.line_length }}
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

